# lexguard-mcp

./: .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  env.example  mcp-config-guide.md  mcp.json.new  pyproject.toml  render.yaml  requirements.txt
.claude/: settings.local.json
.cursor/rules/: lexguard-architecture.mdc
.github/workflows/: ci.yml
docs/guides/: DEPLOYMENT_GUIDE.md  HACKATHON_GUIDE.md  LEXGUARD_TOOL_GUIDE.md  MCP_COMPLIANCE_RULES.md  (+9 more)
examples/: claude-desktop-mcp.local.json  cursor-mcp.local.json
mcp/: manifest.json
prompts/: README.md  contract_risk_check.md  labor_contract_review.md
scripts/: _migrate_repos_async.py  smoke_eflawjosub_fallback.py
src/: main.py
tests/: conftest.py  test_article_unit_selection.py  test_axis_query_builder.py  test_base_repository.py  test_document_issue_call_signature.py  test_document_issue_prompts.py  test_domain_classifier.py  test_eflawjosub_fallback.py  test_eflawjosub_integration.py  test_fixture_regression.py  test_health_service.py  test_law_comparison_history_html.py  test_law_comparison_mcp.py  test_law_detail_efyd.py  test_local_ordinance_codes.py  test_local_ordinance_parsing.py  test_log_sanitize.py  test_mcp_tool_args.py  test_precedent_lookup_cleanup.py  test_precedent_repository.py  test_prompts.py  test_resource_handlers_mcp.py  test_resources.py  test_response_formatter_masking.py  test_response_formatter_mcp_json.py  test_response_formatter_meta.py  test_smart_search.py  test_smart_search_call_signature.py  test_smart_search_lookup_tools.py
(+86 files in other folders)
